change index.html show style

--- a/templates/Layout.html
+++ b/templates/Layout.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  {# todo: change vendor title #}
   <title>{{ title }} | {{ vendor }}</title>
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="apple-touch-icon-precomposed" href="/favicon.png">
