--- a/templates/admin/admin.html
+++ b/templates/admin/admin.html
@@ -1,92 +1,6 @@
 {% extends 'admin/Layout.html' %}
 
-{% set title = 'Захиалгууд' %}
+{% set title = 'Admin' %}
 
 {% block content %}
-  #: Төлбөр төлөгдөөгүй захиалгууд  CONFIRMED
-  <h4 class="d-print-none">Төлбөр төлөгдөөгүй захиалгууд</h4>
-  <div class="row d-print-none">
-    {% for o in confirmed_order_list %}
-      {% set o_data = json.loads(o.data_json) %}
-      <div class="col-12 col-sm-6 col-lg-4">
-        <div class="card">
-          <div class="card-body">
-            <div class="mb-3">
-              <div class="text-muted justify-content-between" style="float:right">
-                <small>{{ o.created_at.strftime('%Y-%m-%d %H:%M') }}</small>
-                <button class="btn btn-light btn-icon text-muted" data-toggle="dropdown" aria-expanded="false">
-                  <i class="fa fa-ellipsis-v"></i>
-                </button>
-                <div class="dropdown-menu dropdown-menu-right">
-                  <div class="dropdown-arrow"></div>
-                  <form method="post" action="" class="mt-3">
-                    <input type="hidden" name="order_id" value="{{ o.id }}">
-                    <input type="hidden" name="action" value="mark_as_paid">
-                    <button href="#" class="dropdown-item" type="submit" onclick="return confirm('Are you sure?')" draggable="false">Төлбөр төлсөн</button>
-                  </form>
-                </div>
-              </div>
-              <span class="badge badge-danger">
-                {{ relative(o.created_at) }}
-              </span>
-            </div>
-            Нийт дүн: <strong class="text-danger tugrik">{{ fmt_price(order_total(o_data)) }}</strong><br>
-            {% for o in o_data %}
-              <div class="text-muted pl-3">
-                {{ o.product_title }} ({{ fmt_price(o.product_price) }}) &times; {{ o.count }}
-              </div>
-            {% endfor %}
-            Нэр: <strong>{{ o.name }}</strong><br>
-            Утас: <strong>{{ o.phone }}</strong><br>
-            Хаяг: <strong>{{ o.address }}</strong><br>
-            Гүйлгээний утга: <strong class="text-danger">{{ get_order_code(o.id) }}, {{ o.phone }}</strong>
-          </div>
-        </div>
-      </div>
-    {% endfor %}
-  </div>
-
-  #: Төлбөр төлөгдсөн захиалгууд    PAID
-  <h4 class="text-success">Төлбөр төлөгдсөн захиалгууд</h4>
-  <div class="row">
-    {% for o in paid_order_list %}
-      {% set o_data = json.loads(o.data_json) %}
-      <div class="col-12 col-sm-6 col-lg-4">
-        <div class="card" style="page-break-before:always">
-          <div class="card-body">
-            <div class="mb-3">
-              <div class="text-muted" style="float:right">
-                <small>{{ o.created_at.strftime('%Y-%m-%d %H:%M') }}</small>
-                <button class="btn btn-light btn-icon text-muted" data-toggle="dropdown" aria-expanded="false">
-                  <i class="fa fa-ellipsis-v"></i>
-                </button>
-                <div class="dropdown-menu dropdown-menu-right">
-                  <div class="dropdown-arrow"></div>
-                  <form method="post" action="" class="mt-3 d-print-none">
-                    <input type="hidden" name="order_id" value="{{ o.id }}">
-                    <input type="hidden" name="action" value="mark_as_unpaid">
-                    <button href="#" class="dropdown-item" onclick="return confirm('Are you sure?')" draggable="false">Төлөгдөөгүй болгох</button>
-                  </form>
-                </div>
-              </div>
-              <span class="badge badge-success d-print-none">
-                {{ relative(o.created_at) }}
-              </span>
-            </div>
-            Нийт дүн: <strong class="text-success tugrik">{{ fmt_price(order_total(o_data)) }}</strong><br>
-            {% for o in o_data %}
-              <div class="text-muted pl-3">
-                {{ o.product_title }} ({{ fmt_price(o.product_price) }}) &times; {{ o.count }}
-              </div>
-            {% endfor %}
-            Нэр: <strong>{{ o.name }}</strong><br>
-            Утас: <strong>{{ o.phone }}</strong><br>
-            Хаяг: <strong>{{ o.address }}</strong><br>
-            Гүйлгээний утга: <strong class="text-success">{{ get_order_code(o.id) }}, {{ o.phone }}</strong>
-          </div>
-        </div>
-      </div>
-    {% endfor %}
-  </div>
-  #:endfold
 {% endblock %}
