--- a/templates/admin/Layout.html
+++ b/templates/admin/Layout.html
@@ -20,30 +20,18 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary py-lg-0" style="min-height:3.5rem">
       <div class="container">
         #:2 brand
-        {% if request.path.startswith('/admin') %}
           <a class="navbar-brand" href="/admin">
             Admin
           </a>
-        {% else %}
-          <a class="navbar-brand" href="/manager">
-            Manager
-          </a>
-        {% endif %}
         <div class="collapse navbar-collapse">
           #:2 left links
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             {% if request.path.startswith('/admin') %}
               <li class="nav-item">
-                <a class="nav-link" href="/admin">Захиалгууд</a>
+                <a class="nav-link" href="/admin">Хэрэглэгчид</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/admin/order/list-finished">Хүргэгдсэн захиалгууд</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/admin/product/list">Бараанууд</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/admin/config">Тохиргоо</a>
+                <a class="nav-link" href="/admin/order/list-finished">Барааны жагсаалт</a>
               </li>
             {% endif %}
           </ul>
@@ -51,14 +39,10 @@
           #:2 right links
           <ul class="navbar-nav mt-2 mt-lg-0 text-right">
             <a class="nav-link" href="/" target="_blank">
-              Веб сайтыг харах
+              Нүүр хуудас харах
               <i class="fas fa-external-link-alt"></i>
             </a>
-            {% if request.path.startswith('/admin') %}
-              <a class="nav-link" href="/admin?out">Logout</a>
-            {% else %}
-              <a class="nav-link" href="/manager?out">Logout</a>
-            {% endif %}
+            <a class="nav-link"  href="/admin?out">Гарах</a>
           </ul>
           #:endfold2
         </div>
