--- a/templates/login.html
+++ b/templates/login.html
@@ -1,34 +1,64 @@
-<!doctype html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>Нэвтрэх</title>
-  <link rel="shortcut icon" href="/favicon.ico">
-  <link rel="apple-touch-icon-precomposed" href="/favicon.png">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.0/css/bootstrap.min.css">
-  <style>
-    .form-signin {
-      width: 100%;
-      max-width: 330px;
-      padding: 15px;
-      margin: 0 auto;
-    }
-  </style>
-</head>
-<body class="text-center bg-light">
-  <div class="container mt-5">
-    <form class="form-signin" method="post">
-      <input type="password" name="password" class="form-control {{- ' is-invalid' if error }}" placeholder="Нууц үг" required autofocus>
-      <input type="hidden" name="action" value="login">
-
-      {% if profile == 'manager' %}
-        <input type="text" class="d-none" name="user" value="manager--{{ site }}">
-        <button class="btn btn-primary btn-block mt-3" type="submit">Login as manager</button>
-      {% else %}
-        <input type="text" class="d-none" name="user" value="admin--{{ site }}">
-        <button class="btn btn-info btn-block mt-3" type="submit">Login as admin</button>
-      {% endif %}
-    </form>
-  </div>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"><!-- End Required meta tags -->
+    <!-- Begin SEO tag -->
+    <title> Sign In | User </title>
+    <meta property="og:title" content="Sign In">
+    <link rel="canonical" href="https://uselooper.com">
+    <meta property="og:url" content="https://uselooper.com">
+    <!-- Favicons -->
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" href="/favicon.png">
+    <link rel="stylesheet" href="https://uselooper.com/assets/stylesheets/theme.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+  </head>
+  <body>
+    <main class="auth">
+      <header class="auth-header">
+        <p> Нэвтрэх эрх байхгүй юу? <a href="auth-signup.html">Шинээр үүсгэх</a>
+        </p>
+      </header>
+        <form class="auth-form">
+          <div class="form-group">
+            <div class="form-label-group">
+              <input type="text" class="form-control" placeholder="Хэрэглэгчийн нэр" autofocus=""> 
+              <label for="inputUser">Хэрэглэгчийн нэр</label>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="form-label-group">
+              <input type="password" class="form-control" placeholder="Нууц үг"> 
+              <label for="inputPassword">Нууц үг</label>
+            </div>
+          </div>
+          <div class="form-group">
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Нэвтрэх</button>
+          </div>
+          <div class="form-group text-center">
+            <div class="custom-control custom-control-inline custom-checkbox">
+              <input type="checkbox" class="custom-control-input" id="remember-me"> 
+              <label class="custom-control-label" for="remember-me">Холболтыг хадгалах</label>
+            </div>
+          </div>
+          <div class="text-center pt-3">
+            <a href="auth-recovery-username.html" class="link">Нэвтрэх нэр мартсан</a> 
+            <br>
+            <div class="mt-3">
+              <a href="auth-recovery-password.html" class="link">Нэвтрэх нууц үг мартсан</a>
+            </div>
+          </div>
+        </form>
+      <footer class="auth-footer"> © 2020 All Rights Reserved.</footer>
+    </main>
+  <link rel="stylesheet" href="https://uselooper.com/assets/stylesheets/theme.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-touchspin/4.3.0/jquery.bootstrap-touchspin.min.js"></script>
+  <script src="https://uselooper.com/assets/javascript/theme.js"></script>
+  </body>
 </html>
